Função cria receita e atualização de model receita

--- a/alurareceitas/templates/partials/_menu.html
+++ b/alurareceitas/templates/partials/_menu.html
@@ -61,7 +61,9 @@
 
                                 <li><a href="{% url 'index' %}">Página Principal</a></li>
                                 <li><a href="{% url 'dashboard' %}">Minhas receitas</a></li>
+                                <li><a href="{% url 'cria_receita' %}">Criar Receita</a></li>
                                 <li><a href="{% url 'logout' %}">Logout</a></li>
+                                
 
                                 {% else %}
 
